--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   shared_preferences: ^2.0.15
   firebase_auth: ^3.4.1
   fluttertoast: ^8.0.9
+  favorite_button: ^0.0.4
+  group_radio_button: ^1.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
