--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   group_radio_button: ^1.2.0
   intl: ^0.17.0
   cloud_firestore: ^3.2.1
+  hover_effect: ^0.6.0
+  hovering: ^1.0.4
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - images/
+  # assets:
+  #   - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
